--- a/css/styles.css
+++ b/css/styles.css
@@ -602,7 +602,7 @@ img {
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
-  border: 1px solid #f4f4fd;
+  border: 1px solid #2e2f42;
 }
 
 .icon-close-btn {
@@ -617,7 +617,7 @@ img {
 .close-modal-btn:hover,
 .close-modal-btn:focus {
   background-color: #404bbf;
-  border: none;
+  border-color: transparent;
 }
 
 .title-modal-text {
@@ -638,6 +638,12 @@ img {
 }
 
 .modal-form-lable {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
 }
 
 .input-wrapper-container {
@@ -667,4 +673,109 @@ img {
 
 .modal-input:focus + .modal-icon {
   fill: #4d5ae5;
+}
+
+/* text area modal */
+
+.form-container-comment {
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 18px;
+}
+
+.modal-form-lable-comment {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-form-comment {
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+  width: 360px;
+  height: 120px;
+  resize: none;
+  outline: none;
+  padding: 8px 16px;
+  transition: border 250ms linear;
+  display: block;
+}
+
+.modal-form-comment:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-form-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+/* modal-checkbox */
+
+.modal-container-checkbox {
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 24px;
+}
+
+.modal-input-checkbox {
+}
+
+.modal-label-checkbox {
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.custom-checkbox {
+  border-radius: 2px;
+  border: 1px solid #2e2f42;
+  width: 16px;
+  height: 16px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+}
+
+.modal-input-checkbox:checked + .modal-label-checkbox > .custom-checkbox {
+  border-color: transparent;
+  background-color: #404bbf;
+}
+
+.custom-checkbox-icon {
+  fill: #f4f4fd;
+}
+
+.checkbox-link {
+  text-decoration: underline;
+  color: #4d5ae5;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+/* modal-send-button */
+
+.modal-send-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  border: transparent;
+  min-width: 169px;
 }
